# PYLib-Web

./: .gitignore  README.md  plant_web.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: __init__.py  auth.py  books.py  checkins.py  loans.py  members.py  reports.py  students.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  book.py  checkin.py  loan.py  log.py  member.py  user.py
backend/app/reports/: member_card.py  summary.py
backend/app/schemas/: auth.py  book.py  checkin.py  loan.py  log.py  member.py  student.py  user.py
backend/app/services/: audit.py  qr.py  totp.py
backend/app/utils/: crypto.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  studentClient.ts
frontend/src/components/Button/: Button.module.css  index.tsx
frontend/src/components/QRScanner/: QRScanner.module.css  index.tsx
frontend/src/components/StatusCard/: StatusCard.module.css  index.tsx
frontend/src/components/Table/: Table.module.css  index.tsx
frontend/src/layouts/: AuthLayout.module.css  AuthLayout.tsx  MainLayout.module.css  MainLayout.tsx  StudentLayout.module.css  StudentLayout.tsx
frontend/src/pages/CheckInTerminal/: CheckInTerminal.module.css  index.tsx
frontend/src/pages/Dashboard/: index.tsx
frontend/src/providers/: AppProviders.tsx
frontend/src/store/: auth.ts  studentAuth.ts
frontend/src/styles/: global.css
frontend/src/utils/: alerts.ts
(+10 files in other folders)
